tests/unit_tests/sema/binder_duplicate_field_01.cc
// RUN: %cxx -verify %s

struct S {
  int value;
  int value;  // expected-error {{duplicate member 'value'}}
};
